# py-proxmox-toolkit

./: .gitignore  .py-pve-root  EXAMPLES.md  LICENSE  README.md  clean_pycache  enable_autocomplete.sh  main.py  pyproject.toml  requirements.txt  setup_venv  template.py
core/: __init__.py  autocomplete.py  config.py  parser.py
core/classes/: AttrDict.py  ColoredFormatter.py  Prompt.py  systemd.py
core/debian/: apt.py  constants.py  os_release.py  udev.py
core/exceptions/: base.py
core/format/: colors.py
core/integrations/: discord.py  ntfy.py
core/network/: interface_status.py  interfaces.py
core/proxmox/: backup.py  constants.py  guests.py  manager.py  net_change.py  network.py  pve_guest.py  pve_manager.py  pve_storage.py  replication.py  storage.py  tbu_net_change.py  vmid_change.py
core/signal_handlers/: sigint.py
core/sqlite/: connector.py
core/utils/: check_root.py  datediff.py  grep.py  path.py  prompt.py  shell.py  yes_no_input.py
core/validators/: domain.py  email.py  ipaddress.py  mac.py  port.py  url.py
py_pve_toolkit/: __init__.py  config.py  parser.py
py_pve_toolkit/classes/: ColoredFormatter.py
py_pve_toolkit/exceptions/: base.py
py_pve_toolkit/integrations/: discord.py  ntfy.py
py_pve_toolkit/monitoring/: pve_guests.py
py_pve_toolkit/proxmox/: pve_storage.py  vmid_change.py
py_pve_toolkit/sqlite/: connector.py
py_pve_toolkit/utils/: yes_no_input.py
py_pve_toolkit/validators/: domain.py  url.py
scripts/: test_argcomplete.py
scripts/general/: update.py
scripts/guests/: change_id.py  cloudinit_ip_based_on_host.py  (+1 more)
(+66 files in other folders)
